# youtube-rag-indexer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
docs/: architecture.md  workflow.md
src/: cli.py
src/pipeline/: __init__.py  chat.py  embedder.py  queue.py  runner.py  searcher.py  summarizer.py  worker.py
src/utils/: __init__.py  cli.py  config.py  download_model.py  logger.py  youtube.py
